--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,13 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= yield :page_head %>
   </head>
 
   <body>
     <%= yield %>
+    <%= javascript_include_tag 'application' %>
+    <%= yield :page_body %>
+
   </body>
 </html>
