--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <% content_for :page_head do %>
   <%= stylesheet_pack_tag 'tunnel_logs' %>
 <% end %>
-
-<% content_for :page_head do %>
+<div id="tunnelLogs"></div>
+<% content_for :page_body do %>
   <%= javascript_pack_tag 'tunnel_logs' %>
 <% end %>
