start work on frontend

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <% content_for :page_head do %>
-  <%= stylesheet_pack_tag 'tunnel_logs' %>
+  <%= stylesheet_pack_tag 'client' %>
 <% end %>
-<div id="tunnelLogs"></div>
+
+<div id="ateEight"></div>
+
 <% content_for :page_body do %>
-  <%= javascript_pack_tag 'tunnel_logs' %>
+  <%= javascript_pack_tag 'client' %>
 <% end %>
