--- a/client/stylesheets/_grid.css
+++ b/client/stylesheets/_grid.css
@@ -3,98 +3,18 @@
  * Also protected by Patent Pending: 15/916,593
  */
 
-@import './grids/_model.css';
-@import './grids/_docs.css';
-
-#___gatsby, #___gatsby > div {
-  width: 100%;
-  height: 100%;
-}
-
-main.grid {
+main {
   width: 100%; /* .w-100 */
   height: 100%;
   display: grid;
 
-  & > .subGrid {
-    width: 100%; /* .w-100 */
-    height: 100%;
-    display: grid;
-  }
+  grid-gap: var(--spacing-small);
+  padding: var(--spacing-small, .5rem);
 
-  @media (--breakpoint-extra-large) {
-    grid-gap: var(--spacing-small);
-    padding: var(--spacing-small, .5rem);
-    & > .subGrid {
-      grid-gap: var(--spacing-extra-small);
-      padding: var(--spacing-extra-small);
-    }
+  & > * {
+    background-color: var(--white-20); /* .bg-white-20 */
+    border: 1px solid var(--dark-blue);
+    border-radius: var(--border-radius-3, .5rem);
+    display: block;
   }
-
-  @media (--breakpoint-large) {
-    grid-gap: var(--spacing-small);
-    padding: var(--spacing-small, .5rem);
-    & > .subGrid {
-      grid-gap: var(--spacing-extra-small);
-      padding: var(--spacing-extra-small);
-    }
-  }
-
-  @media (--breakpoint-medium) {
-    grid-gap: var(--spacing-extra-small);
-    padding: var(--spacing-extra-small, .5rem);
-    & > .subGrid {
-      grid-gap: var(--spacing-extra-small);
-      padding: var(--spacing-extra-extra-small);
-    }
-  }
-
-  @media (--breakpoint-small) {
-    grid-gap: var(--spacing-none);
-    padding: var(--spacing-none);
-
-    & > .subGrid {
-      grid-gap: var(--spacing-extra-small);
-      padding: var(--spacing-extra-extra-small);
-    }
-  }
-
-  & > .whole,
-  & > div:first-child {
-    z-index: 1;
-    grid-row: first / last;
-    grid-column: first / last;
-  }
-
-  & > .logoRegion {
-    grid-area: logo;
-  }
-  & > .ratingsRegion {
-    grid-area: ratings;
-  }
-  & > .chooserRegion {
-    grid-area: chooser;
-  }
-  & > .titleRegion {
-    grid-area: title;
-  }
-  & > .viewerRegion {
-    grid-area: viewer;
-  }
-  & > .navRegion {
-    grid-area: nav;
-  }
-  & > .sidebarRegion {
-    grid-area: sidebar;
-  }
-  & > .fullPaneRegion {
-    grid-area: fullPane;
-  }
-
-}
-
-.region {
-  background-color: var(--white-20); /* .bg-white-20 */
-  border: 1px solid var(--dark-blue);
-  border-radius: var(--border-radius-3, .5rem);
 }
