--- a/client/stylesheets/app.css
+++ b/client/stylesheets/app.css
@@ -2,27 +2,21 @@
  * Copyright (c) 2018. CPP, Inc. All rights reserved.
  * Also protected by Patent Pending: 15/916,593
  */
-
 @import './tachyons.css';
 @import './__palette.css';
 @import './__variables.css';
 @import './__media.css';
 @import './_flex.css';
 @import './_grid.css';
-@import './_layout.css';
-@import './_burger_menu.css';
-@import './_select.css';
 
-html, #tunnelLogs, .pageWrapper {
+html, body, #ateEight {
   height: 100%; /* .h-100 */
   width: 100%; /* .w-100 */
+  padding: var(--spacing-none);
+  margin: var(--spacing-none);
+  overflow-y: hidden;
 }
 
 body {
-  height: 100%;
-  padding: var(--spacing-none);
-  margin: var(--spacing-none);
   background: var(--body-background);
-  width: 100%;
-  overflow-y: hidden;
 }
