--- a/client/pages/Games/Games.module.css
+++ b/client/pages/Games/Games.module.css
@@ -1,23 +1,12 @@
 .GamesPage {
   grid-template-rows: auto 1fr;
+}
+.GameList {
+  padding: var(--spacing-small);
 
-  & > header {
-    padding-left: var(--spacing-medium);
-    padding-right: var(--spacing-medium);
-
-
-    & > h1 {
-      font-size: var(--font-size-2);
-    }
-
-    & > nav {
-      & > ul > li {
-        list-style: none;
-      }
+  & > ul {
+    & > li {
+      list-style: none;
     }
   }
-}
-
-.GameList {
-
 }
