--- a/client/stylesheets/_grid.css
+++ b/client/stylesheets/_grid.css
@@ -3,7 +3,8 @@
  * Also protected by Patent Pending: 15/916,593
  */
 
-main {
+
+.grid {
   width: 100%; /* .w-100 */
   height: 100%;
   display: grid;
@@ -15,6 +16,22 @@ main {
     background-color: var(--white-40); /* .bg-white-20 */
     border: 2px solid var(--gold);
     border-radius: var(--border-radius-3, .5rem);
+    display: block;
+  }
+}
+
+.subGrid {
+  width: 100%; /* .w-100 */
+  height: 100%;
+  display: grid;
+
+  grid-gap: var(--spacing-extra-small);
+  padding: var(--spacing-extra-small);
+
+  & > * {
+    background-color: var(--white-20); /* .bg-white-20 */
+    border: 2px solid var(--dark-purple);
+    border-radius: var(--border-radius-2);
     display: block;
   }
 }
