--- a/client/pages/Game/game.module.css
+++ b/client/pages/Game/game.module.css
@@ -5,9 +5,60 @@
 }
 
 .players {
-
 }
 
 .projects {
+}
 
+.title {
+  composes: spreadFlex from global;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+
+  & > h1 {
+    font-size: var(--font-size-3);
+    flex: 1 1 auto;
+    text-transform: none;
+    padding-left: var(--spacing-small);
+    padding-right: var(--spacing-small);
+  }
+
+  & > nav {
+    flex: 1 1 auto;
+    padding-left: var(--spacing-small);
+    padding-right: var(--spacing-small);
+  }
+}
+
+.player {
+  & > header {
+    width: 100%;
+    background-color: var(--dark-purple);
+    color: var(--near-white);
+    padding: var(--spacing-extra-extra-small) var(--spacing-small);
+
+    & > span {
+      font-size: var(--font-size-5);
+      padding-left: var(--spacing-extra-small);
+      padding-right: var(--spacing-extra-small);
+      font-weight: bold;
+      background-color: var(--near-white);
+      color: var(--dark-purple);
+      float: left;
+      border-radius: var(--border-radius-circle);
+    }
+
+    & > h2 {
+      width: 100%;
+      font-size: var(--font-size-4);
+      text-align: center;
+    }
+  }
+}
+
+.playerWorkers {
+  margin: var(--spacing-none);
+  padding: var(--spacing-none);
+  composes: spreadFlex from global;
 }
