--- a/client/panes/Player/pane.module.css
+++ b/client/panes/Player/pane.module.css
@@ -1,3 +1,35 @@
-.player {
+.pane {
+  & > header {
+    width: 100%;
+    background-color: var(--dark-purple);
+    color: var(--near-white);
+    padding: var(--spacing-extra-extra-small) var(--spacing-small);
+    border-radius: var(--border-radius-2);
 
+    & > span {
+      font-size: var(--font-size-5);
+      padding-left: var(--spacing-extra-small);
+      padding-right: var(--spacing-extra-small);
+      font-weight: bold;
+      background-color: var(--near-white);
+      color: var(--dark-purple);
+      float: left;
+      border-radius: var(--border-radius-circle);
+    }
+
+    & > h2 {
+      width: 100%;
+      font-size: var(--font-size-4);
+      text-align: center;
+    }
+  }
+  & > ul {
+    margin: var(--spacing-none);
+    padding: var(--spacing-none);
+
+    & > li {
+      & > span {
+      }
+    }
+  }
 }
