--- a/client/components/Worker/styles.module.css
+++ b/client/components/Worker/styles.module.css
@@ -1,10 +1,13 @@
 .Worker {
-  font-size: var(--font-size-4);
+  composes: fa-layers from global;
+  composes: fa-fw from global;
+
+  margin: var(--spacing-none);
+  font-size: var(--font-size-3);
   padding-left: var(--spacing-extra-small);
   padding-right: var(--spacing-extra-small);
   font-weight: bold;
   border-radius: var(--border-radius-circle);
-  border: thin solid var(--black-50);
 }
 
 .counter {
@@ -28,8 +31,20 @@
 .workerPurple {
   color: var(--workerPurple);
 }
+.counter {
+  color: var(--near-white);
+}
 
 .bar {
 
+  & > ul {
+    & > li {
+
+    }
+  }
+}
+
+.spread {
+  composes: spreadFlex from global;
 }
 
