--- a/client/components/Worker/styles.module.css
+++ b/client/components/Worker/styles.module.css
@@ -8,6 +8,8 @@
   padding-right: var(--spacing-extra-small);
   font-weight: bold;
   border-radius: var(--border-radius-circle);
+  text-align: center;
+
 }
 
 .counter {
@@ -41,4 +43,7 @@
   composes: spreadFlex from global;
 }
 
+.stack {
+  composes: centeringFlex from global;
+}
 
