--- a/client/panes/ProjectInfo/pane.module.css
+++ b/client/panes/ProjectInfo/pane.module.css
@@ -1,15 +1,15 @@
-/* main grid */
-.info {
-  grid-area: gameInfo;
-}
-.players {
- grid-area: playerArea;
-}
-.projects {
-  grid-area: projectArea;
+.projectInfo {
+  composes: subGrid from global;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-areas:
+      "barBag project1 project2 project3 project4"
+      "barBag project5 project6 project7 project8"
+      "barBag project9 project10 project11 project12"
+      "barBag project13 project14 project15 project16"
+;
 }
 
-/* projectArea grid */
 .barBag {
   grid-area: barBag;
 }
