--- a/client/panes/ProjectInfo/pane.module.css
+++ b/client/panes/ProjectInfo/pane.module.css
@@ -1,17 +1,56 @@
 .projectInfo {
   composes: subGrid from global;
+}
+
+.north,
+.south {
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.east,
+.west {
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(5, 1fr);
+}
+
+.north {
+  grid-template-areas:
+    'barBag barBag barBag barBag'
+    'project1 project2 project3 project4'
+    'project5 project6 project7 project8'
+    'project9 project10 project11 project12'
+    'project13 project14 project15 project16';
+}
+
+.south {
+  grid-template-areas:
+    'project1 project2 project3 project4'
+    'project5 project6 project7 project8'
+    'project9 project10 project11 project12'
+    'project13 project14 project15 project16'
+    'barBag barBag barBag barBag';
+}
+.east {
   grid-template-areas:
     'barBag project1 project2 project3 project4'
     'barBag project5 project6 project7 project8'
     'barBag project9 project10 project11 project12'
     'barBag project13 project14 project15 project16';
 }
+.west {
+  grid-template-areas:
+    'project1 project2 project3 project4 barBag'
+    'project5 project6 project7 project8 barBag'
+    'project9 project10 project11 project12 barBag'
+    'project13 project14 project15 project16 barBag';
+}
 
 .barBag {
   grid-area: barBag;
+  flex-direction: row;
 }
+
 .project1 {
   grid-area: project1;
 }
