--- a/client/panes/ProjectCard/styles.module.css
+++ b/client/panes/ProjectCard/styles.module.css
@@ -1,7 +1,40 @@
-.projectCard {
-  & > h3 {
-    font-size: var(--font-size-4);
-    font-weight: bold;
+.pane {
+  display: grid;
+  grid-template-rows: auto auto 1fr;
 
+  & > header {
+    width: 100%;
+    background-color: var(--dark-purple);
+    color: var(--near-white);
+    padding: var(--spacing-extra-extra-small) var(--spacing-small);
+    border-top-left-radius: var(--border-radius-2);
+    border-top-right-radius: var(--border-radius-2);
+
+    & > span {
+      font-size: var(--font-size-5);
+      padding-left: var(--spacing-extra-small);
+      padding-right: var(--spacing-extra-small);
+      font-weight: bold;
+      background-color: var(--near-white);
+      color: var(--dark-purple);
+      float: left;
+      border-radius: var(--border-radius-circle);
+    }
+
+    & > h2 {
+      width: 100%;
+      font-size: var(--font-size-4);
+      text-align: center;
+    }
+  }
+
+  & > .info {
+    background-color: var(--white-50);
+    height: 100%;
+    width: 100%;
+  }
+
+  & > .workerBar {
+    padding-top: var(--spacing-extra-small);
   }
 }
