--- a/client/components/MainHeader/styles.module.css
+++ b/client/components/MainHeader/styles.module.css
@@ -1,22 +1,36 @@
 .MainHeader {
-  composes: spredFlex from global;
-  display: flex;
+  composes: flexRow from global;
+  composes: itemsCenter from global;
+  composes: justifyBetween from global;
   padding-left: var(--spacing-medium);
   padding-right: var(--spacing-medium);
+  height: 100%;
+
 
   & > h1 {
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-6);
   }
 
   & > nav {
     align-content: unset;
     align-items: unset;
 
-    & > ul > li {
-      list-style: none;
-      margin-left: var(--spacing-small);
-      margin-right: var(--spacing-small);
+    & > ul {
 
+      & > li {
+        height: 100%;
+        list-style: none;
+        margin-left: var(--spacing-small);
+        margin-right: var(--spacing-small);
+        font-size: var(--font-size-5);
+
+      }
     }
   }
+}
+.pageNav {
+  composes: flexRow from global;
+  composes: alignCenter from global;
+  composes: justifyEnd from global;
+
 }
