--- a/client/components/Title/styles.module.css
+++ b/client/components/Title/styles.module.css
@@ -1,9 +1,6 @@
 .title {
+  composes: flexRow justifyBetween itemsCenter flexRowReverse from global;
   background-color: var(--white-40);
-  composes: flexAround-Center from global;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
 
   & > h1 {
     font-size: var(--font-size-3);
