--- a/client/panes/PlayerCard/styles.module.css
+++ b/client/panes/PlayerCard/styles.module.css
@@ -9,22 +9,12 @@
     padding: var(--spacing-extra-extra-small) var(--spacing-small);
     border-top-left-radius: var(--border-radius-2);
     border-top-right-radius: var(--border-radius-2);
-
-    & > span {
-      font-size: var(--font-size-5);
-      padding-left: var(--spacing-extra-small);
-      padding-right: var(--spacing-extra-small);
-      font-weight: bold;
-      background-color: var(--near-white);
-      color: var(--dark-purple);
-      float: left;
-      border-radius: var(--border-radius-circle);
-    }
+    align-items: center;
 
     & > h2 {
       width: 100%;
       font-size: var(--font-size-4);
-      text-align: center;
+      text-align: left;
     }
   }
 
@@ -43,7 +33,5 @@
   & > figure {
     margin: var(--spacing-none);
     padding: var(--spacing-none);
-
   }
 }
-
