--- a/client/stylesheets/_grid.css
+++ b/client/stylesheets/_grid.css
@@ -7,6 +7,7 @@
   & > * {
     background-color: var(--white-40); /* .bg-white-20 */
     border: 2px solid var(--gold);
-    border-radius: var(--border-radius-3, .5rem);
+    border-radius: var(--border-radius-3, 0.5rem);
   }
 }
+
